# zeronat

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  compose.bridge.yml  compose.yml  get.sh  install.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  release.yml  znpppoe.yml
crates/installer/: Cargo.toml
crates/installer/src/: args.rs  bridge.rs  install.rs  main.rs  sys.rs  term.rs  ui.rs
crates/tui/: Cargo.toml
crates/tui/src/: frame.rs  key.rs  lib.rs  style.rs
crates/znpppoe/: Cargo.toml  Dockerfile  README.md
crates/znpppoe/src/: bridge.rs  driver.rs  httpproxy.rs  main.rs  netstack.rs  proxy.rs  socks5.rs
docs/: index.html
src/: admin.rs  bridge.rs  client.rs  client_admin.rs  clientcfg.rs  clientctl.rs  clientproto.rs  config.rs  dgram.rs  identity.rs  kcp.rs  lib.rs  logging.rs  main.rs  netfilter.rs  noise.rs  proto.rs  proxyproto.rs  server.rs  tap.rs  upgrade.rs
src/config/: codec.rs  mod.rs
src/dht/: bencode.rs  bep44.rs  mod.rs  node.rs
src/pppoe/: auth.rs  cli.rs  datapath.rs  discovery.rs  engine.rs  mod.rs  netcfg.rs  session.rs  tunnel.rs
src/pppoe/ppp/: ipv4cp.rs  lcp.rs  mod.rs  option_fsm.rs  pap.rs  wire.rs
src/tap/: linux.rs  mod.rs
src/tui/: client_console.rs  console.rs  frame.rs  input.rs  mod.rs  render.rs  style.rs  term.rs
tests/: console_pty.rs  loopback.rs
