[package]
name = "zeronat"
version = "0.4.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
x25519-dalek = { version = "2", default-features = false, features = ["getrandom"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10", default-features = false }
hmac = "0.12"
kcp = { version = "0.6", default-features = false }
getrandom = "~0.2"
libc = "0.2"

[dev-dependencies]
snow = "0.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
