[package]
name = "zeronat"
version = "0.11.1"
edition = "2021"
license = "MIT"

[workspace]
members = ["crates/tui", "crates/installer"]
default-members = ["."]

[features]
default = ["dht", "tui"]
dht = ["dep:ed25519-dalek", "dep:sha1", "dep:sha2"]
# Interactive admin console (unix only; falls back to one-shot output without it).
tui = ["dep:zntui"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
x25519-dalek = { version = "2", default-features = false, features = ["getrandom"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10", default-features = false }
hmac = "0.12"
kcp = { version = "0.6", default-features = false }
getrandom = "~0.2"
ed25519-dalek = { version = "2", default-features = false, optional = true }
sha1 = { version = "0.10", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, features = ["std", "force-soft"], optional = true }
zntui = { path = "crates/tui", optional = true }

# Used by the Linux TAP bridge and the unix interactive console (termios/ioctl).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
snow = "0.9"
tokio = { version = "1", features = ["test-util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
